--- a/sliceMachine/styles/variables/_typography.scss
+++ b/sliceMachine/styles/variables/_typography.scss
@@ -1,5 +1,5 @@
 // Font family
-$body-font-family-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+$body-font-family-primary: ' Franklin', Roboto,
   'Helvetica Neue', Arial, sans-serif;
 $body-font-family-secondary: serif !default;
 
